# dispatch

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: classifier.rs  commands.rs  diagnostics.rs  lib.rs  main.rs  models.rs  slack.rs  storage.rs
src/components/: AboutDialog.tsx  InboxTabs.tsx  MessageList.tsx  MessagePreview.tsx  MessageRow.tsx  OnboardingWizard.tsx  Settings.tsx  SnoozeDialog.tsx  TypeaheadInput.tsx  UpdateDialog.tsx
src/hooks/: useKeyboard.ts  useLoadingTimer.ts  useMessages.ts
src/lib/: parseSnoozeInput.ts  tauri.ts
src/styles/: main.css
